--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li><a href="#experience">experience</a></li>
             <a href="#" class="blue-btn">contact</a>
         </ul>
-        <div class="nav-menu" onclick="toggleNavbar()">
+        <div class="nav-menu cursor-pointer" onclick="toggleNavbar()">
             <i class="fa-sharp fa-solid fa-bars"></i>
         </div>
     </nav>
@@ -57,33 +57,37 @@
             <li><a href="#experience" onclick="toggleNavbar()">experience</a></li>
             <li><a href="#contact">contact</a></li>
         </ul>
-        <div class="mt-10 text-2xl" onclick="toggleNavbar()">
+        <div class="mt-10 text-2xl cursor-pointer" onclick="toggleNavbar()">
             <i class="fa-solid fa-xmark"></i>
         </div>
     </div>
 
-    <section id="home" class="h-screen bg-cover bg-center flex justify-start items-center m-0 px-8 bg-dark-navy">
-        <div class="container header-content">
-            <p class="text-xl lg:text-2xl text-white font-bold">Hi, I'm Fandi Ahmad</p>
-            <h1 class="text-4xl lg:text-8xl text-white font-bold mb-10 w-9/12">Front-End Developer</h1>
-            <a href="#portofolio" class="blue-btn-glow font-semibold py-3 px-6">View My Work</a>
+    <section id="home" class="h-screen bg-cover bg-center flex justify-start items-center m-0 bg-dark-navy">
+        <div class="home-text">
+            <p class="text-xl lg:text-2xl text-white font-bold pl-8">Hi, I'm Fandi Ahmad</p>
+            <h1 class="text-5xl lg:text-8xl text-white font-bold mb-10 pl-8">Front-End Developer</h1>
+            <a href="#portofolio" class="blue-btn-glow font-semibold py-3 px-6 ml-8">View My Work</a>
+            <div class="bubble-blur-field">
+                <div class="bubble-blur"></div>
+            </div>
         </div>
         <!-- blue line -->
-        <div class="w-full pl-20">
+        <!-- <div class="hero-line"></div> -->
+        <!-- <div class="w-full pl-20">
             <div class="bg-blue-500 hero-line"></div>
-        </div>
+        </div> -->
     </section>
 
-    <div id="about" class="flex items-center px-10 bg-dark-navy text-white">
-        <div class="w-1/2 py-5">
+    <div id="about" class="about px-10 text-white bg-dark-navy">
+        <div class="my-5 about-field">
             <div class="rounded-2xl about-img" style="background-image: url(assets/images/my-photo.webp)"></div>
             <div class="rounded-2xl about-shape"></div>
         </div>
-        <div class="w-1/2 px-4 pr-16">
+        <div class="px-4 about-text">
             <h2 class="text-2xl font-bold mb-4">About Me</h2>
-            <p class="text-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at tortor a risus fringilla gravida. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis auctor venenatis dui, vel egestas elit consequat in. Vivamus cursus vestibulum lorem, vel bibendum odio ultricies eget. Aenean ultricies risus lectus, eu bibendum enim tincidunt id.</p>
-            <div class="mt-4 flex gap-4">
-                <button class="blue-btn">Hire Me</button>
+            <p class="sm:text-sm lg:text-lg text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at tortor a risus fringilla gravida. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis auctor venenatis dui, vel egestas elit consequat in. Vivamus cursus vestibulum lorem, vel bibendum odio ultricies eget. Aenean ultricies risus lectus, eu bibendum enim tincidunt id.</p>
+            <div class="mt-4">
+                <button class="blue-btn mr-4 mb-4">Hire Me</button>
                 <button class="blue-btn-border">Resume</button>
             </div>
         </div>
@@ -92,44 +96,44 @@
     <div id="portofolio" class="bg-dark-navy text-white flex flex-col gap-10 pb-16">
         <h1 class="text-xl font-semibold uppercase tracking-wider flex justify-center pt-20 pb-10">Portofolio</h1>
         
-        <div class="flex items-center px-10 bg-dark-navy text-white">
-            <div class="w-1/2 px-4 pr-16">
+        <div class="px-10 pb-10 bg-dark-navy text-white porto">
+            <div class="px-4 porto-text">
                 <h2 class="text-2xl font-bold mb-4">Project 1</h2>
-                <p class="text-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at tortor a risus fringilla gravida. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis auctor venenatis dui, vel egestas elit consequat in. Vivamus cursus vestibulum lorem, vel bibendum odio ultricies eget. Aenean ultricies risus lectus, eu bibendum enim tincidunt id.</p>
+                <p class="lg:text-lg text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at tortor a risus fringilla gravida. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis auctor venenatis dui, vel egestas elit consequat in. Vivamus cursus vestibulum lorem, vel bibendum odio ultricies eget. Aenean ultricies risus lectus, eu bibendum enim tincidunt id.</p>
             </div>
-            <div class="w-1/2 py-5 flex justify-end">
+            <div class="py-5 porto-field">
                 <div class="rounded-2xl porto-img" style="background-image: url(assets/images/freelance.jpg)"></div>
-                <div class="rounded-2xl porto-shape"></div>
+                <div class="rounded-full porto-shape"></div>
             </div>
         </div>
 
-        <div class="flex items-center px-10 bg-dark-navy text-white">
-            <div class="w-1/2 py-5 flex justify-start">
-                <div class="rounded-2xl porto-img" style="background-image: url(assets/images/freelance.jpg)"></div>
-                <div class="rounded-2xl porto-shape-2"></div>
-            </div>
-            <div class="w-1/2 px-4 pr-16">
+        <div class="px-10 pb-10 bg-dark-navy text-white porto-2">
+            <div class="px-4 porto-text">
                 <h2 class="text-2xl font-bold mb-4">Project 2</h2>
-                <p class="text-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at tortor a risus fringilla gravida. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis auctor venenatis dui, vel egestas elit consequat in. Vivamus cursus vestibulum lorem, vel bibendum odio ultricies eget. Aenean ultricies risus lectus, eu bibendum enim tincidunt id.</p>
+                <p class="lg:text-lg text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at tortor a risus fringilla gravida. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis auctor venenatis dui, vel egestas elit consequat in. Vivamus cursus vestibulum lorem, vel bibendum odio ultricies eget. Aenean ultricies risus lectus, eu bibendum enim tincidunt id.</p>
+            </div>
+            <div class="py-5 porto-field-2">
+                <div class="rounded-2xl porto-img" style="background-image: url(assets/images/freelance.jpg)"></div>
+                <div class="rounded-full porto-shape-2"></div>
             </div>
         </div>
 
-        <div class="flex items-center px-10 bg-dark-navy text-white">
-            <div class="w-1/2 px-4 pr-16">
+        <div class="px-10 pb-10 bg-dark-navy text-white porto">
+            <div class="px-4 porto-text">
                 <h2 class="text-2xl font-bold mb-4">Project 3</h2>
-                <p class="text-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at tortor a risus fringilla gravida. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis auctor venenatis dui, vel egestas elit consequat in. Vivamus cursus vestibulum lorem, vel bibendum odio ultricies eget. Aenean ultricies risus lectus, eu bibendum enim tincidunt id.</p>
+                <p class="lg:text-lg text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at tortor a risus fringilla gravida. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis auctor venenatis dui, vel egestas elit consequat in. Vivamus cursus vestibulum lorem, vel bibendum odio ultricies eget. Aenean ultricies risus lectus, eu bibendum enim tincidunt id.</p>
             </div>
-            <div class="w-1/2 py-5 flex justify-end">
+            <div class="py-5 porto-field">
                 <div class="rounded-2xl porto-img" style="background-image: url(assets/images/freelance.jpg)"></div>
-                <div class="rounded-2xl porto-shape"></div>
+                <div class="rounded-full porto-shape"></div>
             </div>
         </div>
     </div>
 
     <div id="experience" class="bg-dark-navy text-white flex flex-col justify-center items-center pb-16">
         <h1 class="text-xl font-semibold uppercase tracking-wider flex justify-center py-10">Experience</h1>
-        <div class="flex flex-col gap-10 w-3/5">
-            <div class="flex justify-between">
+        <div class="flex flex-col w-9/12">
+            <div class="experience">
                 <div>
                     <img loading="lazy" src="assets/logo/html.png" alt="" class="logo-skill">
                     <p class="text-center">HTML</p>
@@ -147,7 +151,7 @@
                     <p class="text-center">ReactJS</p>
                 </div>
             </div>
-            <div class="flex justify-between">
+            <div class="experience">
                 <div>
                     <img loading="lazy" src="assets/logo/vuejs.png" alt="" class="logo-skill">
                     <p class="text-center">VueJS</p>
