--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" href="assets/logo/logo-fandi.webp">
 </head>
 <body>
     <nav class="p-8 absolute bg-dark-navy">
@@ -71,21 +72,18 @@
                 <div class="bubble-blur"></div>
             </div>
         </div>
-        <!-- blue line -->
-        <!-- <div class="hero-line"></div> -->
-        <!-- <div class="w-full pl-20">
-            <div class="bg-blue-500 hero-line"></div>
-        </div> -->
     </section>
 
     <div id="about" class="about px-10 text-white bg-dark-navy">
         <div class="my-5 about-field">
             <div class="rounded-2xl about-img" style="background-image: url(assets/images/my-photo.webp)"></div>
-            <div class="rounded-2xl about-shape"></div>
+            <div class="rounded-full about-shape"></div>
         </div>
         <div class="px-4 about-text">
             <h2 class="text-2xl font-bold mb-4">About Me</h2>
-            <p class="sm:text-sm lg:text-lg text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at tortor a risus fringilla gravida. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis auctor venenatis dui, vel egestas elit consequat in. Vivamus cursus vestibulum lorem, vel bibendum odio ultricies eget. Aenean ultricies risus lectus, eu bibendum enim tincidunt id.</p>
+            <p class="sm:text-sm lg:text-lg text-justify">
+                Halo, saya Fandi, seorang Front-End Developer yang baru saja memulai karir di dunia programming. Saya memiliki pengetahuan dalam HTML, CSS, dan JavaScript, serta pengalaman dengan kerangka kerja seperti React dan Vue. Saya bersemangat dalam menciptakan pengalaman web yang menarik dan interaktif, dan selalu terbuka untuk belajar dan berkembang lebih jauh dalam bidang ini.
+            </p>
             <div class="mt-4">
                 <button class="blue-btn mr-4 mb-4">Hire Me</button>
                 <button class="blue-btn-border">Resume</button>
@@ -94,22 +92,26 @@
     </div>
 
     <div id="portofolio" class="bg-dark-navy text-white flex flex-col gap-10 pb-16">
-        <h1 class="text-xl font-semibold uppercase tracking-wider flex justify-center pt-20 pb-10">Portofolio</h1>
+        <h1 class="text-xl font-semibold text-white uppercase tracking-wider flex justify-center pt-20 pb-10">Portofolio</h1>
         
         <div class="px-10 pb-10 bg-dark-navy text-white porto">
             <div class="px-4 porto-text">
-                <h2 class="text-2xl font-bold mb-4">Project 1</h2>
-                <p class="lg:text-lg text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at tortor a risus fringilla gravida. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis auctor venenatis dui, vel egestas elit consequat in. Vivamus cursus vestibulum lorem, vel bibendum odio ultricies eget. Aenean ultricies risus lectus, eu bibendum enim tincidunt id.</p>
+                <h2 class="text-3xl font-bold mb-4">Project 1</h2>
+                <h2 class="text-xl font-bold mb-4 capitalize">Landing page PENA</h2>
+                <p class="lg:text-lg text-justify">
+                    PENA (Programming Engineering and Networking Adhi Guna) merupakan organisasi kemahasiswaan yang berfokus di bidang IT. PENA adalah komunitas yang berdedikasi untuk mengembangkan pengetahuan dan keterampilan di bidang pemrograman, rekayasa perangkat lunak, dan jaringan komputer.
+                </p>
             </div>
             <div class="py-5 porto-field">
-                <div class="rounded-2xl porto-img" style="background-image: url(assets/images/freelance.jpg)"></div>
+                <div class="rounded-2xl porto-img" style="background-image: url(assets/images/web-pena.png)"></div>
                 <div class="rounded-full porto-shape"></div>
             </div>
         </div>
 
         <div class="px-10 pb-10 bg-dark-navy text-white porto-2">
             <div class="px-4 porto-text">
-                <h2 class="text-2xl font-bold mb-4">Project 2</h2>
+                <h2 class="text-3xl font-bold mb-4">Project 2</h2>
+                <h2 class="text-xl font-bold mb-4 capitalize">example</h2>
                 <p class="lg:text-lg text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at tortor a risus fringilla gravida. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis auctor venenatis dui, vel egestas elit consequat in. Vivamus cursus vestibulum lorem, vel bibendum odio ultricies eget. Aenean ultricies risus lectus, eu bibendum enim tincidunt id.</p>
             </div>
             <div class="py-5 porto-field-2">
@@ -120,7 +122,8 @@
 
         <div class="px-10 pb-10 bg-dark-navy text-white porto">
             <div class="px-4 porto-text">
-                <h2 class="text-2xl font-bold mb-4">Project 3</h2>
+                <h2 class="text-3xl font-bold mb-4">Project 3</h2>
+                <h2 class="text-xl font-bold mb-4 capitalize">example</h2>
                 <p class="lg:text-lg text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at tortor a risus fringilla gravida. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis auctor venenatis dui, vel egestas elit consequat in. Vivamus cursus vestibulum lorem, vel bibendum odio ultricies eget. Aenean ultricies risus lectus, eu bibendum enim tincidunt id.</p>
             </div>
             <div class="py-5 porto-field">
