add todolist app project

--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
                 <p class="lg:text-lg text-justify">
                     PENA (Programming Engineering and Networking Adhi Guna) merupakan organisasi kemahasiswaan yang berfokus di bidang IT. PENA adalah komunitas yang berdedikasi untuk mengembangkan pengetahuan dan keterampilan di bidang pemrograman, rekayasa perangkat lunak, dan jaringan komputer.
                 </p>
+                <a href="https://penaku.tech" target="_blank">
+                    <button class="blue-btn mt-4 mb-4">more</button>
+                </a>
             </div>
             <div class="py-5 porto-field">
                 <div class="rounded-2xl porto-img" style="background-image: url(assets/images/web-pena.png)"></div>
@@ -111,11 +114,16 @@
         <div class="px-10 pb-10 bg-dark-navy text-white porto-2">
             <div class="px-4 porto-text">
                 <h2 class="text-3xl font-bold mb-4">Project 2</h2>
-                <h2 class="text-xl font-bold mb-4 capitalize">example</h2>
-                <p class="lg:text-lg text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at tortor a risus fringilla gravida. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis auctor venenatis dui, vel egestas elit consequat in. Vivamus cursus vestibulum lorem, vel bibendum odio ultricies eget. Aenean ultricies risus lectus, eu bibendum enim tincidunt id.</p>
+                <h2 class="text-xl font-bold mb-4 capitalize">To Do List App</h2>
+                <p class="lg:text-lg text-justify">
+                    Aplikasi to do list sederhana yang dibuat dengan HTML, CSS dan Javascript. Mudah tambahkan, tandai, dan hapus tugas untuk hari ini atau besok. Menggunakan local storage browser sebagai penyimpanan data pada aplikasi. Dan juga tersedia fitur untuk berganti tema terang dan gelap.
+                </p>
+                <a href="./mini-project/todolist/index.html" target="_blank">
+                    <button class="blue-btn mt-4 mb-4">more</button>
+                </a>
             </div>
             <div class="py-5 porto-field-2">
-                <div class="rounded-2xl porto-img" style="background-image: url(assets/images/freelance.jpg)"></div>
+                <div class="rounded-2xl porto-img" style="background-image: url(assets/images/todolist-app-preview.png)"></div>
                 <div class="rounded-full porto-shape-2"></div>
             </div>
         </div>
