add whack a mole game in project

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <p class="lg:text-lg text-justify">
                     Aplikasi to do list sederhana yang dibuat dengan HTML, CSS dan Javascript. Mudah tambahkan, tandai, dan hapus tugas untuk hari ini atau besok. Menggunakan local storage browser sebagai penyimpanan data pada aplikasi. Dan juga tersedia fitur untuk berganti tema terang dan gelap.
                 </p>
-                <a href="./mini-project/todolist/index.html" target="_blank">
+                <a href="./mini-project/todolist/" target="_blank">
                     <button class="blue-btn mt-4 mb-4">more</button>
                 </a>
             </div>
@@ -131,11 +131,16 @@
         <div class="px-10 pb-10 bg-dark-navy text-white porto">
             <div class="px-4 porto-text">
                 <h2 class="text-3xl font-bold mb-4">Project 3</h2>
-                <h2 class="text-xl font-bold mb-4 capitalize">example</h2>
-                <p class="lg:text-lg text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at tortor a risus fringilla gravida. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis auctor venenatis dui, vel egestas elit consequat in. Vivamus cursus vestibulum lorem, vel bibendum odio ultricies eget. Aenean ultricies risus lectus, eu bibendum enim tincidunt id.</p>
+                <h2 class="text-xl font-bold mb-4 capitalize">Whack a Mole</h2>
+                <p class="lg:text-lg text-justify">
+                    Game 'Whack-a-Mole: Tikus Tanah. Siapkan palu digitalmu dan siap-siap untuk memukul tikus-tikus yang muncul dengan cepat. Tunjukkan seberapa cepat reaksimu dalam permainan ini. Tantang dirimu sendiri untuk meraih skor tertinggi dalam usaha memukul tikus-tikus yang muncul semakin liar. 
+                </p>
+                <a href="./mini-project/whackamole/" target="_blank">
+                    <button class="blue-btn mt-4 mb-4">more</button>
+                </a>
             </div>
             <div class="py-5 porto-field">
-                <div class="rounded-2xl porto-img" style="background-image: url(assets/images/freelance.jpg)"></div>
+                <div class="rounded-2xl porto-img" style="background-image: url(assets/images/whackamole-preview.png)"></div>
                 <div class="rounded-full porto-shape"></div>
             </div>
         </div>
