--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
             <li><a href="#home">home</a></li>
             <li><a href="#about">about me</a></li>
             <li><a href="#portofolio">portofolio</a></li>
-            <li><a href="#">services</a></li>
             <li><a href="#experience">experience</a></li>
-            <a href="#" class="blue-btn">contact</a>
+            <a href="#contact" class="blue-btn">contact</a>
         </ul>
         <div class="nav-menu" onclick="toggleNavbar()">
             <i class="fa-sharp fa-solid fa-bars"></i>
@@ -40,9 +39,8 @@
             <li><a href="#home">home</a></li>
             <li><a href="#about">about me</a></li>
             <li><a href="#portofolio">portofolio</a></li>
-            <li><a href="#">services</a></li>
             <li><a href="#experience">experience</a></li>
-            <a href="#" class="blue-btn">contact</a>
+            <a href="#contact" class="blue-btn">contact</a>
         </ul>
         <div class="nav-menu cursor-pointer" onclick="toggleNavbar()">
             <i class="fa-sharp fa-solid fa-bars"></i>
@@ -189,6 +187,38 @@
         </div>
     </div>
 
+    <footer id="contact" class="bg-dark text-white flex justify-between px-10 pt-10" style="min-height: 250px;">
+        <div class="w-full">
+            <img src="assets/logo/logo-fandi.webp" alt="" class="w-12">
+        </div>
+
+        <div class="w-full">
+            <h3 class="text-lg">Social Media</h3>
+            <div class="mt-2">
+                <a href="" class="mr-2">
+                    <i class="fa-brands fa-instagram fa-2xl"></i>
+                </a>
+                <a href="" class="mr-2">
+                    <i class="fa-brands fa-square-facebook fa-2xl"></i>
+                </a>
+                <a href="" class="mr-2">
+                    <i class="fa-brands fa-linkedin fa-2xl"></i>
+                </a>
+                <a href="" class="mr-2">
+                    <i class="fa-brands fa-github fa-2xl"></i>
+                </a>
+            </div>
+        </div>
+
+        <div class="w-72">
+            <h3 class="text-lg mb-2">Navigation</h3>
+            <a href="#home">home</a> <br>
+            <a href="#about">about me</a> <br>
+            <a href="#portofolio">portofolio</a> <br>
+            <a href="#experience">experience</a> <br>
+            <a href="#contact">contact</a>
+        </div>
+    </footer>
     
     <script src="js/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
