modified duration aos animate

--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
             <div class="rounded-2xl about-img" style="background-image: url(assets/images/my-photo.webp)"></div>
             <div class="rounded-full about-shape"></div>
         </div>
-        <div class="px-4 about-text" data-aos="fade-up" data-aos-duration="1000">
-            <h2 class="text-2xl font-bold mb-4">About Me</h2>
-            <p class="sm:text-sm lg:text-lg text-justify">
+        <div class="px-4 about-text">
+            <h2 class="text-2xl font-bold mb-4" data-aos="fade-up" data-aos-duration="500">About Me</h2>
+            <p class="sm:text-sm lg:text-lg text-justify" data-aos="fade-up" data-aos-duration="750">
                 Halo, saya Fandi, seorang Front-End Developer yang baru saja memulai karir di dunia programming. Saya memiliki pengetahuan dalam HTML, CSS, dan JavaScript, serta pengalaman dengan kerangka kerja seperti React dan Vue. Saya bersemangat dalam menciptakan pengalaman web yang menarik dan interaktif, dan selalu terbuka untuk belajar dan berkembang lebih jauh dalam bidang ini.
             </p>
-            <div class="mt-4">
+            <div class="mt-4" data-aos="fade-up" data-aos-duration="1000">
                 <button class="blue-btn mr-4 mb-4">Hire Me</button>
                 <button class="blue-btn-border">Resume</button>
             </div>
@@ -94,14 +94,14 @@
         <h1 class="text-xl font-semibold text-white uppercase tracking-wider flex justify-center pt-20 pb-10">Portofolio</h1>
         
         <div class="px-10 pb-10 bg-dark-navy text-white porto">
-            <div class="px-4 porto-text" data-aos="fade-up" data-aos-duration="1000">
-                <h2 class="text-3xl font-bold mb-4">Project 1</h2>
-                <h2 class="text-xl font-bold mb-4 capitalize">Landing page PENA</h2>
-                <p class="lg:text-lg text-justify">
+            <div class="px-4 porto-text">
+                <h2 class="text-3xl font-bold mb-4" data-aos="fade-up" data-aos-duration="500">Project 1</h2>
+                <h2 class="text-xl font-bold mb-4 capitalize" data-aos="fade-up" data-aos-duration="750">Landing page PENA</h2>
+                <p class="lg:text-lg text-justify" data-aos="fade-up" data-aos-duration="1000">
                     PENA (Programming Engineering and Networking Adhi Guna) merupakan organisasi kemahasiswaan yang berfokus di bidang IT. PENA adalah komunitas yang berdedikasi untuk mengembangkan pengetahuan dan keterampilan di bidang pemrograman, rekayasa perangkat lunak, dan jaringan komputer.
                 </p>
                 <a href="https://penaku.tech" target="_blank">
-                    <button class="blue-btn mt-4 mb-4">more</button>
+                    <button class="blue-btn mt-4 mb-4" data-aos="fade-up" data-aos-duration="1250">more</button>
                 </a>
             </div>
             <div class="py-5 porto-field" >
@@ -111,14 +111,14 @@
         </div>
 
         <div class="px-10 pb-10 bg-dark-navy text-white porto-2">
-            <div class="px-4 porto-text" data-aos="fade-up" data-aos-duration="1000">
-                <h2 class="text-3xl font-bold mb-4">Project 2</h2>
-                <h2 class="text-xl font-bold mb-4 capitalize">To Do List App</h2>
-                <p class="lg:text-lg text-justify">
+            <div class="px-4 porto-text">
+                <h2 class="text-3xl font-bold mb-4" data-aos="fade-up" data-aos-duration="500">Project 2</h2>
+                <h2 class="text-xl font-bold mb-4 capitalize" data-aos="fade-up" data-aos-duration="750">To Do List App</h2>
+                <p class="lg:text-lg text-justify" data-aos="fade-up" data-aos-duration="1000">
                     Aplikasi to do list sederhana yang dibuat dengan HTML, CSS dan Javascript. Mudah tambahkan, tandai, dan hapus tugas untuk hari ini atau besok. Menggunakan local storage browser sebagai penyimpanan data pada aplikasi. Dan juga tersedia fitur untuk berganti tema terang dan gelap.
                 </p>
                 <a href="./mini-project/todolist/" target="_blank">
-                    <button class="blue-btn mt-4 mb-4">more</button>
+                    <button class="blue-btn mt-4 mb-4" data-aos="fade-up" data-aos-duration="1250">more</button>
                 </a>
             </div>
             <div class="py-5 porto-field-2">
@@ -128,14 +128,14 @@
         </div>
 
         <div class="px-10 pb-10 bg-dark-navy text-white porto">
-            <div class="px-4 porto-text" data-aos="fade-up" data-aos-duration="1000">
-                <h2 class="text-3xl font-bold mb-4">Project 3</h2>
-                <h2 class="text-xl font-bold mb-4 capitalize">Whack a Mole</h2>
-                <p class="lg:text-lg text-justify">
+            <div class="px-4 porto-text">
+                <h2 class="text-3xl font-bold mb-4" data-aos="fade-up" data-aos-duration="500">Project 3</h2>
+                <h2 class="text-xl font-bold mb-4 capitalize" data-aos="fade-up" data-aos-duration="750">Whack a Mole</h2>
+                <p class="lg:text-lg text-justify" data-aos="fade-up" data-aos-duration="1000">
                     Game 'Whack-a-Mole: Tikus Tanah. Siapkan palu digitalmu dan siap-siap untuk memukul tikus-tikus yang muncul dengan cepat. Tunjukkan seberapa cepat reaksimu dalam permainan ini. Tantang dirimu sendiri untuk meraih skor tertinggi dalam usaha memukul tikus-tikus yang muncul semakin liar. 
                 </p>
                 <a href="./mini-project/whackamole/" target="_blank">
-                    <button class="blue-btn mt-4 mb-4">more</button>
+                    <button class="blue-btn mt-4 mb-4" data-aos="fade-up" data-aos-duration="1250">more</button>
                 </a>
             </div>
             <div class="py-5 porto-field">
