fix padding in content

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </section>
 
     <div id="about" class="about px-10 text-white bg-dark-navy">
-        <div class="my-5 about-field mr-10">
+        <div class="my-5 about-field">
             <div class="rounded-2xl about-img" style="background-image: url(assets/images/my-photo.webp)"></div>
             <div class="rounded-full about-shape"></div>
         </div>
