modified text explained

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="I'm Fandi, a Full Stack Web Developer with a passion for creating web experiences that are not only functional, but also stunning.">
     <meta name="keywords" content="portofolio, profil, fandi ahmad, frontend, backend, fullstack, programmer">
     <meta name="robots" content="index, follow">
-    <title>Fandi Ahmad | Personal Portfolio</title>
+    <title>Fandi Ahmad | Full Stack Web Developer</title>
   </head>
   <body>
     <div id="root"></div>
