modified icon in header

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/assets/logo/logo-fandi.webp" />
+    <link rel="icon" type="image/svg+xml" href="/img-profile-rounded.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Fandi Ahmad">
     <meta name="description" content="I'm Fandi, a Full Stack Web Developer with a passion for creating web experiences that are not only functional, but also stunning.">
